# stable-diffusion-tensorflow

./: .gitignore  create.py  default.nix  entries.dhall  flake.nix  img2img.py  models.nix  n_text2image.py  pyproject.toml  shell.nix  text2image.py
stable_diffusion_tf/: create.py  stable_diffusion.py  text2image.py
stable_diffusion_weights/: __init__.py  pyproject.toml
